force-app/main/default/objects/Case/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <defaultValue>6060</defaultValue>
    <label>Assigned To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>