force-app/main/default/objects/Case/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <defaultValue>NOW() + 2</defaultValue>
    <label>Completed By</label>
    <type>DateTime</type>
</CustomField>