force-app/main/default/objects/Case/fields/Custom_Form__c.field-meta.xml
<CustomField>
    <fullName>Custom_Form__c</fullName>
    <defaultValue>41</defaultValue>
    <label>Custom Form</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>