force-app/main/default/objects/Case/fields/Flow_To_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>Flow_To_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates whether case has flown to NetSuite</description>
    <label>Flow To NetSuite</label>
    <type>Checkbox</type>
</CustomField>