force-app/main/default/objects/Case/fields/Grasp_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Grasp_Customer_ID__c</fullName>
    <formula>Account.Grasp_Customer_ID__c</formula>
    <label>Grasp Customer ID</label>
    <type>Text</type>
</CustomField>