force-app/main/default/objects/Case/fields/Incident_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Incident_DateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Incident DateTime</label>
    <type>DateTime</type>
</CustomField>