force-app/main/default/objects/Case/fields/Internal_Estimated_Time__c.field-meta.xml
<CustomField>
    <fullName>Internal_Estimated_Time__c</fullName>
    <defaultValue>0.5</defaultValue>
    <label>Internal Estimated Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>