force-app/main/default/objects/Case/fields/IsCaseCreated__c.field-meta.xml
<CustomField>
    <fullName>IsCaseCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to hide some fields while creations of the case, used in before trigger flow for case.</description>
    <label>IsCaseCreated</label>
    <type>Checkbox</type>
</CustomField>