force-app/main/default/objects/Case/fields/NetSuite_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Case_Id__c</fullName>
    <description>This is the case id from NetSuite. This id is populated after case is successfully flown to NetSuite.</description>
    <label>NetSuite Case Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>