force-app/main/default/objects/Case/fields/NetSuite_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Case_Number__c</fullName>
    <label>NetSuite Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>