force-app/main/default/objects/Case/fields/NetSuite_Last_Error__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Last_Error__c</fullName>
    <description>Indicates the most recent error encountered during synchronization with NetSuite. If the case synced successfully, this field will be empty.</description>
    <label>NetSuite Last Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>