force-app/main/default/objects/Case/fields/NetSuite_Last_Error_Date__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Last_Error_Date__c</fullName>
    <description>Indicates the time most terror encountered during synchronization with NetSuite. If the case synced successfully, this field will be empty.</description>
    <label>NetSuite Last Error Date</label>
    <type>DateTime</type>
</CustomField>