force-app/main/default/objects/Case/fields/NetSuite_Last_Success_Date__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Last_Success_Date__c</fullName>
    <description>Indicates the most recent success encountered during synchronization with NetSuite. If there was an error during sync, this field will be empty.</description>
    <label>NetSuite Last Success Date</label>
    <type>DateTime</type>
</CustomField>