force-app/main/default/objects/Case/fields/NetSuite_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates how many times this case has been retried for the sync to NetSuite.</description>
    <label>NetSuite Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>