force-app/main/default/objects/Case/fields/Product_Area__c.field-meta.xml
<CustomField>
    <fullName>Product_Area__c</fullName>
    <defaultValue>59</defaultValue>
    <label>Product Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>