force-app/main/default/objects/Case/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Profile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>