force-app/main/default/objects/Case/fields/Sw_Incoming_Message__c.field-meta.xml
<CustomField>
    <fullName>Sw_Incoming_Message__c</fullName>
    <description>This field is used to store chat transcript between agentforce and current user</description>
    <label>Incoming Message</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>